--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="splashModel"
-            type="com.jaky.demo.surface.data.model.ActivitySplashModel" />
+            type="com.jaky.demo.surface.data.binding.ActivitySplashModel" />
     </data>
 
     <RelativeLayout
