--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <SurfaceView
-            android:id="@+id/sv_content"
+        <com.jaky.demo.surface.ui.view.ReaderView
+            android:id="@+id/reader_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
